release-data/changelogs/8.3/plugins/benchmark-cis-debian-11.adoc
= Changelogs for Rudder plugin benchmark-cis-debian-11 8.3.\* versions

== benchmark-cis-debian-11-8.3.12-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.11-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.10-0.10 (2026-04-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.9-0.10 (2026-02-16)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Uninstall on benchmarks failed due to permission denied on prerm script
    (https://issues.rudder.io/issues/28045[#28045])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.8-0.10 (2025-12-22)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: There are still some mention to CIS in the benchmarks
    (https://issues.rudder.io/issues/28043[#28043])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.7-0.10 (2025-12-10)

=== Changes


==== Miscellaneous

* Add lib for augeas methods and implement it in all benchmarks
    (https://issues.rudder.io/issues/27761[#27761])
* Refactoring level 2 controls point in kcllib
    (https://issues.rudder.io/issues/27764[#27764])

=== Bug fixes

==== Miscellaneous

* Fixed: Changes on whitespace semantic breaks benchmarks
    (https://issues.rudder.io/issues/27936[#27936])
* Fixed: Postint should create  /var/rudder/plugins/security-benchmarks/install otherwise rsync may fails
    (https://issues.rudder.io/issues/27794[#27794])
* Fixed: Rename the benchmarks RHEL 8, Debian 11, Debian 12 and Ubuntu 22 to remove CIS
    (https://issues.rudder.io/issues/27806[#27806])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.5-0.10 (2025-10-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Debian 11 - No report in 4.2.6 - Ensure nftables loopback traffic is configured
    (https://issues.rudder.io/issues/27605[#27605])
* Fixed: CIS Debian 11 : "1.5.3 Ensure core dumps are restricted" package check in wrong place
    (https://issues.rudder.io/issues/27609[#27609])
* Fixed: CIS Debian 11 - Missing reports in 5.1.4
    (https://issues.rudder.io/issues/27607[#27607])
* Fixed: CIS Debian 11 - 2.1.21 Ensure mail transfer agent is configured for local-only mode
    (https://issues.rudder.io/issues/27602[#27602])
* Fixed: CIS Debian 11 : “5.4.1.6 Ensure all users last password change date is in the past” audit results incorrect
    (https://issues.rudder.io/issues/27501[#27501])
* Fixed: CIS Debian 11 : “5.4.2.3 Ensure group root is the only GID 0 group” audit results incorrect
    (https://issues.rudder.io/issues/27502[#27502])
* Fixed: RHEL 9 - Section 4.3.3 and 4.3.4 are compliant even if nftable is not present
    (https://issues.rudder.io/issues/27509[#27509])
* Fixed: There are some "null" in the bench descriptions
    (https://issues.rudder.io/issues/27583[#27583])
* Fixed: CIS Debian 11 - Section 2 : Fixes
    (https://issues.rudder.io/issues/27466[#27466])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-debian-11-8.3.4-0.10 (2025-09-15)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: CIS Debian 11 : “5.4.2.2 - Ensure root is the only GID 0 account” audit results incorrect
    (https://issues.rudder.io/issues/27499[#27499])
* Fixed: CIS Debian 11 : “5.4.1.4 Ensure strong password hashing algorithm is configured” Parameter list value selector incorrect
    (https://issues.rudder.io/issues/27516[#27516])
* Fixed: CIS : Fix titles, description and documentation on Debian 11
    (https://issues.rudder.io/issues/27487[#27487])
* Fixed: CIS Debian 11 - Section 1.5 : Missing check for package
    (https://issues.rudder.io/issues/27479[#27479])
* Fixed: CIS Debian 11 : Fix broken description and documentation on sections
    (https://issues.rudder.io/issues/27478[#27478])
* Fixed: Replace deprecated method file_check_exists by file_present
    (https://issues.rudder.io/issues/27470[#27470])
* Fixed: CIS - Debian 11 - Implement Section 6
    (https://issues.rudder.io/issues/27410[#27410])
* Fixed: CIS - Debian 11 - Implement Section 1
    (https://issues.rudder.io/issues/27405[#27405])
* Fixed: CIS - Debian 11 - Implement Section 5
    (https://issues.rudder.io/issues/27409[#27409])
* Fixed: CIS - Debian 11 - Implement Section 3
    (https://issues.rudder.io/issues/27407[#27407])
* Fixed: CIS Debian 11 Section 7 : Missing id
    (https://issues.rudder.io/issues/27462[#27462])
* Fixed: CIS - Debian 11 - Implement Section 7
    (https://issues.rudder.io/issues/27411[#27411])
* Fixed: CIS - Debian 11 - Implement Section 2
    (https://issues.rudder.io/issues/27406[#27406])
* Fixed: CIS - Debian 11 - Implement Section 4
    (https://issues.rudder.io/issues/27408[#27408])
* Fixed: Document how to add entries in a benchmark
    (https://issues.rudder.io/issues/27398[#27398])
* Fixed: Create documentation on how the benchmark are created/built/tested
    (https://issues.rudder.io/issues/27376[#27376])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

